--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,30 @@ services:
       POSTGRES_PASSWORD: "sqlpass"
     ports:
       - "5432:5432"
+    networks:
+      default1:
+        ipv4_address: 192.168.0.100
+
+  portfolio_app:
+    container_name: portfolio_app
+    build:
+      context: .
+      dockerfile: docker/portfolio_service/Dockerfile
+    env_file:
+      - .env-docker
+    ports:
+      - "8000:8000"
+    depends_on:
+      - portfolio_db
+    networks:
+      default1:
+        ipv4_address: 192.168.0.10
+
+
+networks:
+  default1:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.0.0/24
