--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
       dockerfile: docker/portfolio_service/Dockerfile
     env_file:
       - .env-docker
+    command: ["back/portfolio_service/app.sh"]
+#    command: sh -c "cd /back/portfolio_service && alembic upgrade head && cd ../../ && gunicorn back.portfolio_service.portfolio_main:portfolio_app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000"
     ports:
       - "8000:8000"
     depends_on:
