--- a/docker/portfolio_service/Dockerfile
+++ b/docker/portfolio_service/Dockerfile
@@ -9,6 +9,6 @@ RUN pip install -r back/requirements.txt
 COPY back/portfolio_service back/portfolio_service
 COPY back/config.py back/
 
-CMD ["alembic", "upgrade", "head"]
+RUN chmod a+x /back/portfolio_service/app.sh
 
-CMD ["gunicorn", "back.portfolio_service.portfolio_main:portfolio_app", "--workers", "4", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind=0.0.0.0:8000"]
+#CMD ["gunicorn", "back.portfolio_service.portfolio_main:portfolio_app", "--workers", "4", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind=0.0.0.0:8000"]
