--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.7.0
 anyio==4.6.0
 async-timeout==4.0.3
 asyncpg==0.29.0
+bcrypt==4.2.0
 click==8.1.7
 exceptiongroup==1.2.2
 fastapi==0.115.0
@@ -14,11 +15,14 @@ idna==3.10
 Mako==1.3.5
 MarkupSafe==3.0.1
 packaging==24.1
+passlib==1.7.4
 psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
+PyJWT==2.9.0
 python-dotenv==1.0.1
+python-multipart==0.0.12
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.38.6
