--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,13 @@
 version: "3.9"
 services:
+  rabbitmq:
+    container_name: rabbitmq
+    image: rabbitmq:latest
+    ports:
+      - "5672:5672"
+    networks:
+      default1:
+        ipv4_address: 192.168.0.200
   portfolio_db:
     container_name: portfolio_postgres
     image: postgres:latest
@@ -26,6 +34,7 @@ services:
       - "8000:8000"
     depends_on:
       - portfolio_db
+      - rabbitmq
     networks:
       default1:
         ipv4_address: 192.168.0.10
@@ -56,6 +65,7 @@ services:
       - "8001:8001"
     depends_on:
       - user_db
+      - rabbitmq
     networks:
       default1:
         ipv4_address: 192.168.0.11
