--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aio-pika==9.4.3
+aiormq==6.8.1
 aiosqlite==0.20.0
 alembic==1.13.3
 annotated-types==0.7.0
@@ -7,15 +9,20 @@ asyncpg==0.29.0
 bcrypt==4.2.0
 click==8.1.7
 exceptiongroup==1.2.2
+fast-depends==2.4.12
 fastapi==0.115.0
+faststream==0.5.28
 greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
 Mako==1.3.5
 MarkupSafe==3.0.1
+multidict==6.1.0
 packaging==24.1
+pamqp==3.3.0
 passlib==1.7.4
+propcache==0.2.0
 psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic-settings==2.5.2
@@ -28,3 +35,4 @@ SQLAlchemy==2.0.35
 starlette==0.38.6
 typing_extensions==4.12.2
 uvicorn==0.31.0
+yarl==1.16.0
