--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
 Mako==1.3.5
+markdown-it-py==3.0.0
 MarkupSafe==3.0.1
+mdurl==0.1.2
 multidict==6.1.0
 packaging==24.1
 pamqp==3.3.0
@@ -27,12 +29,17 @@ psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
+Pygments==2.18.0
 PyJWT==2.9.0
 python-dotenv==1.0.1
 python-multipart==0.0.12
+rich==13.9.3
+shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.38.6
+typer==0.12.5
 typing_extensions==4.12.2
 uvicorn==0.31.0
+watchfiles==0.24.0
 yarl==1.16.0
