--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ anyio==4.6.0
 async-timeout==4.0.3
 asyncpg==0.29.0
 bcrypt==4.2.0
+certifi==2024.8.30
 click==8.1.7
 exceptiongroup==1.2.2
 fast-depends==2.4.12
@@ -16,6 +17,8 @@ faststream==0.5.28
 greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.27.2
 idna==3.10
 Mako==1.3.5
 markdown-it-py==3.0.0
