--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,15 @@ services:
       default1:
         ipv4_address: 192.168.0.200
 
+  redis:
+    container_name: redis
+    image: redis:latest
+    ports:
+      - "6380:6379"
+    networks:
+      default1:
+        ipv4_address: 192.168.0.201
+
   portfolio_db:
     container_name: portfolio_postgres
     image: postgres:latest
@@ -114,6 +123,21 @@ services:
     networks:
       default1:
         ipv4_address: 192.168.0.12
+
+  market_data_app:
+    container_name: market_data_app
+    build:
+      context: .
+      dockerfile: docker/market_data_service/Dockerfile
+    env_file:
+      - .env-docker
+    ports:
+      - "8003:8003"
+    depends_on:
+      - redis
+    networks:
+      default1:
+        ipv4_address: 192.168.0.13
 
 networks:
   default1:
