--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 aio-pika==9.4.3
+aioredis==2.0.1
 aiormq==6.8.1
 aiosmtplib==3.0.2
 aiosqlite==0.20.0
 alembic==1.13.3
 annotated-types==0.7.0
 anyio==4.6.0
+APScheduler==3.11.0
 async-timeout==4.0.3
 asyncpg==0.29.0
 bcrypt==4.2.0
@@ -37,6 +39,7 @@ Pygments==2.18.0
 PyJWT==2.9.0
 python-dotenv==1.0.1
 python-multipart==0.0.12
+redis==5.2.1
 rich==13.9.3
 shellingham==1.5.4
 sniffio==1.3.1
@@ -44,6 +47,7 @@ SQLAlchemy==2.0.35
 starlette==0.38.6
 typer==0.12.5
 typing_extensions==4.12.2
+tzlocal==5.2
 uvicorn==0.31.0
 watchfiles==0.24.0
 yarl==1.16.0
