logging added to the entire project, readme updated

--- a/.env-docker-example
+++ b/.env-docker-example
@@ -1,13 +1,32 @@
-RABBIT_MQ=amqp://guest:guest@192.168.0.200:5672/
+RABBIT_MQ_HOST=rabbitmq
+RABBIT_MQ_PORT=5672
 
-DB_PORTFOLIOS_HOST=192.168.0.100
+DB_PORTFOLIOS_HOST=portfolio_db
 DB_PORTFOLIOS_PORT=5432
 DB_PORTFOLIOS_NAME=portfolio_app
 DB_PORTFOLIOS_USER=sqluser
 DB_PORTFOLIOS_PASSWORD=sqlpass
 
-DB_USERS_HOST=192.168.0.101
+DB_USERS_HOST=user_db
 DB_USERS_PORT=5432
 DB_USERS_NAME=user_app
 DB_USERS_USER=sqluser
 DB_USERS_PASSWORD=sqlpass
+
+DB_NOTIFICATIONS_HOST=notification_db
+DB_NOTIFICATIONS_PORT=5432
+DB_NOTIFICATIONS_NAME=notification_app
+DB_NOTIFICATIONS_USER=sqluser
+DB_NOTIFICATIONS_PASSWORD=sqlpass
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=
+SMTP_PASSWORD=""
+
+COINGECKO_API_KEY=
+COINGECKO_URL=https://api.coingecko.com/api/v3/simple/price
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=1
