--- a/docker/user_service/Dockerfile
+++ b/docker/user_service/Dockerfile
@@ -8,6 +8,7 @@ RUN pip install -r back/requirements.txt
 
 COPY back/user_service back/user_service
 COPY back/config.py back/
+COPY back/logging.py back/
 
 RUN chmod a+x /back/user_service/app.sh
 
