--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -148,6 +148,7 @@ services:
       dockerfile: docker/market_data_service/Dockerfile
     env_file:
       - .env-docker
+    command: ["back/market_data_service/app.sh"]
     ports:
       - "8003:8003"
     depends_on:
