--- a/docker/portfolio_service/Dockerfile
+++ b/docker/portfolio_service/Dockerfile
@@ -8,6 +8,7 @@ RUN pip install -r back/requirements.txt
 
 COPY back/portfolio_service back/portfolio_service
 COPY back/config.py back/
+COPY back/logging.py back/
 
 RUN chmod a+x /back/portfolio_service/app.sh
 
